# futuresight

./: .env.example  .gitignore  CLAUDE.md  README.md  dev.sh  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  alembic.ini  evolve_tools.py  pyproject.toml  requirements.freeze.txt
backend/alembic/: env.py
backend/alembic/versions/: 957121dd0594_initial.py
backend/app/: config.py  dashboard.html  database.py  main.py  seed_interests.py
backend/app/api/: agents.py  dashboard.py  evaluation.py  event_graph.py  evolution.py  indicators.py  insights.py  interests.py  meta.py  predictions.py  webhooks.py
backend/app/evolution/: __init__.py  defaults.py  engine.py  llm_advisor.py  reframing.py
backend/app/models/: __init__.py  agent.py  event_graph.py  evolution.py  indicator.py  insight.py  meta.py  prediction.py  price_history.py  source.py  user_interest.py
backend/app/tasks/: backtest.py  categorization_tasks.py  celery_app.py  collection_tasks.py  embedding_tasks.py  evolution_backtest.py  evolution_tasks.py  graph_tasks.py  indicator_tasks.py  insight_tasks.py  meta_tasks.py  prediction_tasks.py  scoring_tasks.py  sentiment_tasks.py
backend/app/tools/: base_rate_tool.py  base_tool.py  contrarian.py  extrapolation.py  graph_context.py  historical_analogy.py  llm_reasoner.py  market_consensus.py  multi_market_ensemble.py  nli_tool.py  sentiment_divergence.py  tool_registry.py  trend_extrapolator.py
backend/scripts/: agent-feature-ideator.md  agent-source-evaluator.md  agent-strategy-optimizer.md
backend/tests/: test_graph_edges.py
(+49 files in other folders)
